ft_containers-unit-test/logs.txt
../vector_tests/insert(std iterators).cpp:28:9: error: no matching member function for call to 'insert'
        vector.insert(vector.begin(), tmp.begin(), tmp.end());
        ~~~~~~~^~~~~~
../vector_tests/insert(std iterators).cpp:40:75: note: in instantiation of function template specialization 'insert_std_test<int>' requested here
        exit(run_vector_unit_test<int>("insert(std iterators)", insert_std_test, insert_std_test));
                                                                                 ^
../vector_tests/../../../vector.hpp:617:7: note: candidate function not viable: no known conversion from 'std::__1::vector<int, std::__1::allocator<int> >::iterator' (aka '__wrap_iter<int *>') to 'ft::vector::size_type' (aka 'unsigned long') for 2nd argument
        void insert(iterator position, size_type n, const value_type &val)
             ^
../vector_tests/../../../vector.hpp:658:7: note: candidate template ignored: deduced conflicting types for parameter 'InputIterator' ('int *' vs. 'std::__1::__wrap_iter<int *>')
        void insert(InputIterator position, InputIterator first, InputIterator last)
             ^
../vector_tests/../../../vector.hpp:575:11: note: candidate function not viable: requires 2 arguments, but 3 were provided
        iterator insert(iterator position, const value_type &val)
                 ^
1 error generated.
arguments were provided
        vector(vector const &rhs)
        ^
1 error generated.
